// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tooltip /> should not render box shadow 1`] = `
<Tooltip
  arrowDirection="bottom"
  backgroundColor="#FFFFFF"
  borderRadius="0px"
  fontColor="#3A494D"
  hasArrow={true}
  hasShadow={false}
  mode="light"
>
  <styled.div
    arrowDirection="bottom"
    backgroundColor="#FFFFFF"
    borderRadius="0px"
    fontColor="#3A494D"
    hasArrow={true}
    hasShadow={false}
    mode="light"
  >
    <div
      className="sc-AxjAm joHvbM"
      mode="light"
    >
      tooltip
    </div>
  </styled.div>
</Tooltip>
`;

exports[`<Tooltip /> should render \`dark-mode\` 1`] = `
<Tooltip
  arrowDirection="bottom"
  backgroundColor="#FFFFFF"
  borderRadius="0px"
  fontColor="#3A494D"
  hasArrow={true}
  hasShadow={true}
  mode="dark"
>
  <styled.div
    arrowDirection="bottom"
    backgroundColor="#FFFFFF"
    borderRadius="0px"
    fontColor="#3A494D"
    hasArrow={true}
    hasShadow={true}
    mode="dark"
  >
    <div
      className="sc-AxjAm rmPoc"
      mode="dark"
    >
      tooltip
    </div>
  </styled.div>
</Tooltip>
`;
